@@ -2,7 +2,7 @@
 # These are the default configuration values.  To override them, create a file local.properties.
 
 # Version of the library that will be published to Maven
-config_mavenPublishVersion=3.4.3
+config_mavenPublishVersion=3.4.4
 
 # GWT version
 config_gwtVersion=2.5.1
